<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AlertDialog.AppCompat.Light">

    <LinearLayout
        android:id="@+id/pr_color_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/Margin_5_dp"
            android:text="@string/color_select"
            android:textAppearance="@android:style/Theme.Translucent"
            android:textColor="@color/sysBlack"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginBottom="@dimen/Margin_5_dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysBlack"
                android:checked="true"
                android:text="New ToggleButton"
                android:textColor="@color/sysWhite"
                android:elegantTextHeight="false"
                android:freezesText="false" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysBlue"
                android:checked="false"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysCyan"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysDkGray"
                android:text="New ToggleButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButton5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysGray" />

            <ToggleButton
                android:id="@+id/toggleButton6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysGreen"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysLtGray"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysMagenta"
                android:text="New ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysRed"
                android:checked="false"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysWhite"
                android:checked="false"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysYellow"
                android:text="New ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:background="@color/sysTransparent"
                android:text="New ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Margin_5_dp"
            android:layout_marginRight="@dimen/Margin_5_dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <ToggleButton
                android:id="@+id/toggleButton12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Margin_5_dp"
                android:layout_marginRight="@dimen/Margin_5_dp"
                android:layout_weight="1"
                android:checked="false"
                android:textOff="@string/color_dialog_ARGB_OFF"
                android:textOn="@string/color_dialog_ARGB_ON" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Margin_5_dp"
            android:layout_marginRight="@dimen/Margin_5_dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_dialog_Alfa"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/sysBlack" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_dialog_red"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/sysBlack" />

                <SeekBar
                    android:id="@+id/seekBar3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_dialog_green"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/sysBlack" />

                <SeekBar
                    android:id="@+id/seekBar3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_dialog_blue"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/sysBlack" />

                <SeekBar
                    android:id="@+id/seekBar4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>